feat: String to Charset